fix horizontal scroll container style bugs

--- a/styles/glue/reset.css
+++ b/styles/glue/reset.css
@@ -51,3 +51,13 @@ html {
 		font-size: 16px;
 	}
 }
+
+button {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
